# DesktopRadar

./: CMakeLists.txt  CMakePresets.json
DesktopRadar/: CMakeLists.txt  DesktopRadar.cpp  DesktopRadar.h
DesktopRadar/include/: Constants.hpp  FlightTracker.hpp  GeoUtils.hpp
DesktopRadar/src/: FlightTracker.cpp  GeoUtils.cpp  main.cpp
